# football-predictor

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: api_football_paid_checklist.md  app.js  data.js  index.html  styles.css
src/football_predictor/: cli.py  config.py
src/football_predictor/data/: api_clients.py  api_football_sync.py  competitions.py  coverage.py  fifa_rankings.py  international_history.py  loaders.py  mass_sync.py  pending_reconciliation.py  quality_plan.py  validators.py  worldcup_2026.py  worldcup_enriched.py
src/football_predictor/database/: db.py  schema.sql
src/football_predictor/evaluation/: backtest.py  metrics.py  prediction_backtest.py
src/football_predictor/features/: match_features.py  team_features.py
src/football_predictor/models/: baseline_elo.py  baseline_poisson.py  ensemble.py  ml_model.py
src/football_predictor/prediction/: adjustments.py  calibration.py  factor_model.py  markets.py  match_context.py  monte_carlo.py  pick_engine.py  player_markets.py  predictor.py  referee_model.py  simulator.py  venue_model.py
src/football_predictor/web/: app.py  asgi.py
src/football_predictor/web/static/: index.html  styles.css
tests/: test_advanced_match_stats.py  test_api_football_sync.py  test_baselines.py  test_data_quality.py  test_features.py  test_fifa_rankings.py  test_monte_carlo_picks.py  test_player_database.py  test_player_markets.py  test_prediction.py  test_prediction_backtest.py  test_workflow.py  test_worldcup_2026.py
