[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "0.1.0"
description = "Base modular para prediccion de partidos de futbol."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "pandas>=2.1",
    "pydantic>=2.5",
    "scikit-learn>=1.4,<1.6",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
api = []

[project.scripts]
football-predictor = "football_predictor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
